crates/swc_ecma_parser/tests/test262-error-references/fail/a70483c4d46a58e2.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/a70483c4d46a58e2.js:1:10
  |
1 | for (let [let];;;) {}
  |          ^^^^^

